# cc-assistant

./: .gitignore  .gitmodules  README.md  TODO.md  config.example.yaml  install.sh  main.py  pyproject.toml
assistant/: bot.py  bridge.py  config.py  discord_bot.py  formatter.py  paths.py  scheduler.py  session.py  slack_monitor.py  tmux_dispatch.py
assistant/voice/: __init__.py
assistant/voice/engines/: __init__.py  faster_whisper.py  openai_api.py  whisper_cpp.py
docs/: qmd-multi-agent.md
hooks/: error-detector.sh.template  notify-telegram.sh.template  precompact-context.sh.template  reflection-trigger.sh.template  self-improving-activator.sh.template  statusline-usage.sh.template  task-received.sh.template  task-stopped.sh.template
launchd/: assistant.plist.template
systemd/: assistant.service.template
templates/assistant/: CLAUDE.md
templates/curious/: CLAUDE.md  onboarding-summary.md
templates/shared/: WORKSPACE_REFERENCE.md
templates/shared/self-improving/: SKILL.md  corrections.md  memory.md
