[project]
name = "cc-assistant"
version = "0.1.0"
description = "Personal AI assistant powered by Claude Code — deployable to any machine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot[all]>=21.0,<22.0",
    "pyyaml>=6.0,<7.0",
    "apscheduler>=3.10,<4.0",
    "slack-sdk>=3.0,<4.0",
    "aiohttp>=3.0,<4.0",
]

[project.optional-dependencies]
# Voice input (transcription of Telegram voice messages).
# Install with: uv sync --extra voice
voice = [
    "faster-whisper>=1.0,<2.0",
]
